@@ -13,19 +13,19 @@ import org.rx.util.function.TripleAction;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.StringTokenizer;
-import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
-import static org.rx.core.Extends.newConcurrentList;
-import static org.rx.core.Extends.tryClose;
+import static org.rx.core.Extends.*;
 
 @Slf4j
 public class ShellCommander extends Disposable implements EventTarget<ShellCommander> {
     @RequiredArgsConstructor
     @Getter
-    public static class OutPrintEventArgs extends EventArgs {
+    public static class PrintOutEventArgs extends EventArgs {
         private static final long serialVersionUID = 4598104225029493537L;
         final int lineNumber;
         final String line;
@@ -36,14 +36,7 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
         }
     }
 
-    @RequiredArgsConstructor
-    @Getter
-    public static class ExitedEventArgs extends EventArgs {
-        private static final long serialVersionUID = 6563058539741657972L;
-        final int exitValue;
-    }
-
-    public static class FileOutHandler extends Disposable implements TripleAction<ShellCommander, OutPrintEventArgs> {
+    public static class FileOutHandler extends Disposable implements TripleAction<ShellCommander, PrintOutEventArgs> {
         final FileStream fileStream;
 
         public FileOutHandler(String filePath) {
@@ -57,9 +50,9 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
         }
 
         @Override
-        public void invoke(ShellCommander s, OutPrintEventArgs e) throws Throwable {
+        public void invoke(ShellCommander s, PrintOutEventArgs e) throws Throwable {
             ByteBuf buf = Bytes.directBuffer();
-            buf.writeCharSequence(String.valueOf(e.lineNumber), StandardCharsets.UTF_8);
+            buf.writeInt(e.lineNumber);
             buf.writeCharSequence(".\t", StandardCharsets.UTF_8);
             buf.writeCharSequence(e.line, StandardCharsets.UTF_8);
             buf.writeCharSequence("\n", StandardCharsets.UTF_8);
@@ -71,7 +64,14 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
         }
     }
 
-    public static final TripleAction<ShellCommander, OutPrintEventArgs> CONSOLE_OUT_HANDLER = (s, e) -> System.out.print(e.toString());
+    @RequiredArgsConstructor
+    @Getter
+    public static class ExitedEventArgs extends EventArgs {
+        private static final long serialVersionUID = 6563058539741657972L;
+        final int exitValue;
+    }
+
+    public static final TripleAction<ShellCommander, PrintOutEventArgs> CONSOLE_OUT_HANDLER = (s, e) -> System.out.print(e.toString());
     static final String LINUX_BASH = "bash -c ", WIN_CMD = "cmd /c ";
     static final List<ShellCommander> KILL_LIST = newConcurrentList(true);
 
@@ -87,21 +87,101 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
         return new ShellCommander(shell, workspace).start().waitFor();
     }
 
-    public final Delegate<ShellCommander, OutPrintEventArgs> onOutPrint = Delegate.create();
+    public static int exec(String shell, String workspace, int timeoutSeconds) {
+        ShellCommander cmd = new ShellCommander(shell, workspace).start();
+        if (!cmd.waitFor(timeoutSeconds)) {
+            cmd.kill();
+        }
+        return cmd.exitValue();
+    }
+
+    /**
+     * Crack a command line.
+     *
+     * @param toProcess the command line to process
+     * @return the command line broken into strings. An empty or null toProcess parameter results in a zero sized array
+     */
+    private static String[] translateCommandline(final String toProcess) {
+        if (toProcess == null || toProcess.isEmpty()) {
+            // no command? no string
+            return new String[0];
+        }
+
+        // parse with a simple finite state machine
+
+        final int normal = 0;
+        final int inQuote = 1;
+        final int inDoubleQuote = 2;
+        int state = normal;
+        final StringTokenizer tok = new StringTokenizer(toProcess, "\"\' ", true);
+        final ArrayList<String> list = new ArrayList<>();
+        StringBuilder current = new StringBuilder();
+        boolean lastTokenHasBeenQuoted = false;
+
+        while (tok.hasMoreTokens()) {
+            final String nextTok = tok.nextToken();
+            switch (state) {
+                case inQuote:
+                    if ("\'".equals(nextTok)) {
+                        lastTokenHasBeenQuoted = true;
+                        state = normal;
+                    } else {
+                        current.append(nextTok);
+                    }
+                    break;
+                case inDoubleQuote:
+                    if ("\"".equals(nextTok)) {
+                        lastTokenHasBeenQuoted = true;
+                        state = normal;
+                    } else {
+                        current.append(nextTok);
+                    }
+                    break;
+                default:
+                    if ("\'".equals(nextTok)) {
+                        state = inQuote;
+                    } else if ("\"".equals(nextTok)) {
+                        state = inDoubleQuote;
+                    } else if (" ".equals(nextTok)) {
+                        if (lastTokenHasBeenQuoted || current.length() != 0) {
+                            list.add(current.toString());
+                            current = new StringBuilder();
+                        }
+                    } else {
+                        current.append(nextTok);
+                    }
+                    lastTokenHasBeenQuoted = false;
+                    break;
+            }
+        }
+
+        if (lastTokenHasBeenQuoted || current.length() != 0) {
+            list.add(current.toString());
+        }
+
+        if (state == inQuote || state == inDoubleQuote) {
+            throw new IllegalArgumentException("Unbalanced quotes in " + toProcess);
+        }
+
+        final String[] args = new String[list.size()];
+        return list.toArray(args);
+    }
+
+    public final Delegate<ShellCommander, PrintOutEventArgs> onPrintOut = Delegate.create();
     public final Delegate<ShellCommander, ExitedEventArgs> onExited = Delegate.create();
 
     final File workspace;
-    final long intervalPeriod;
+    final long daemonPeriod;
     @Getter
     String shell;
     Process process;
-    CompletableFuture<Void> daemonFuture;
+    Future<Void> daemonFuture;
 
     public synchronized boolean isRunning() {
         return process != null && process.isAlive();
     }
 
-    public ShellCommander setReadThenExit() {
+    public synchronized ShellCommander setReadFullyThenExit() {
         if (!Files.isPath(shell)) {
             if (App.IS_OS_WINDOWS && !Strings.startsWithIgnoreCase(shell, WIN_CMD)) {
                 shell = WIN_CMD + shell;
@@ -112,7 +192,7 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
         return this;
     }
 
-    public ShellCommander setAutoRestart() {
+    public synchronized ShellCommander setAutoRestart() {
         onExited.tail((s, e) -> restart());
         return this;
     }
@@ -125,14 +205,14 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
         this(shell, workspace, Constants.DEFAULT_INTERVAL, true);
     }
 
-    public ShellCommander(@NonNull String shell, String workspace, long intervalPeriod, boolean killOnExited) {
+    public ShellCommander(@NonNull String shell, String workspace, long daemonPeriod, boolean killOnExited) {
         this.shell = shell = shell.trim();
         if (Files.isPath(shell)) {
             workspace = FilenameUtils.getFullPathNoEndSeparator(shell);
         }
         this.workspace = workspace == null ? null : new File(workspace);
 
-        this.intervalPeriod = Math.max(1, intervalPeriod);
+        this.daemonPeriod = Math.max(1, daemonPeriod);
         if (killOnExited) {
             KILL_LIST.add(this);
         }
@@ -140,7 +220,7 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
 
     @Override
     protected void freeObjects() {
-        onOutPrint.close();
+        onPrintOut.close();
         kill();
         KILL_LIST.remove(this);
     }
@@ -151,25 +231,25 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
             throw new InvalidException("Already started");
         }
 
-        //Runtime.getRuntime().exec(shell, null, workspace)
-        StringTokenizer st = new StringTokenizer(shell);
-        String[] cmdarray = new String[st.countTokens()];
-        for (int i = 0; st.hasMoreTokens(); i++) {
-            cmdarray[i] = st.nextToken();
-        }
-        Process tmp = process = new ProcessBuilder(cmdarray)
+//        Runtime.getRuntime().exec(shell, null, workspace)
+//        StringTokenizer st = new StringTokenizer(shell);
+//        String[] cmdarray = new String[st.countTokens()];
+//        for (int i = 0; st.hasMoreTokens(); i++) {
+//            cmdarray[i] = st.nextToken();
+//        }
+        log.debug("start {}", shell);
+        Process tmp = process = new ProcessBuilder(translateCommandline(shell))
                 .directory(workspace)
                 .redirectErrorStream(true)  //合并getInputStream和getErrorStream
                 .start();
-        log.debug("start {}", shell);
 
         if (daemonFuture != null) {
             daemonFuture.cancel(true);
         }
-        daemonFuture = Tasks.runAsync(() -> {
+        daemonFuture = Tasks.run(() -> {
             LineNumberReader reader = null;
             try {
-                if (!onOutPrint.isEmpty()) {
+                if (!onPrintOut.isEmpty()) {
                     reader = new LineNumberReader(new InputStreamReader(tmp.getInputStream(), StandardCharsets.UTF_8));
                 }
 
@@ -177,36 +257,64 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
                     try {
                         if (reader != null) {
                             String line;
-                            while ((line = reader.readLine()) != null) {
-                                raiseEvent(onOutPrint, new OutPrintEventArgs(reader.getLineNumber(), line));
+                            while (
+//                                    tmp.isAlive() &&
+                                    (line = reader.readLine()) != null) {
+                                raiseEvent(onPrintOut, new PrintOutEventArgs(reader.getLineNumber(), line));
                             }
                         }
                     } catch (Throwable e) {
-                        TraceHandler.INSTANCE.log("onOutPrint", e);
+                        TraceHandler.INSTANCE.log("onPrintOut", e);
                     }
-                    Thread.sleep(intervalPeriod);
+                    if (!tmp.isAlive()) {
+                        break;
+                    }
+                    Thread.sleep(daemonPeriod);
                 }
             } finally {
                 tryClose(reader);
-                int exitValue = tmp.exitValue();
-                log.debug("exit={} {}", exitValue, shell);
-                raiseEvent(onExited, new ExitedEventArgs(exitValue));
+                synchronized (this) {
+                    int exitValue = tmp.exitValue();
+                    log.debug("exit={} {}", exitValue, shell);
+                    raiseEvent(onExited, new ExitedEventArgs(exitValue));
+                }
             }
         });
         return this;
     }
 
+    public synchronized int exitValue() {
+        if (process == null) {
+            throw new InvalidException("Not start");
+        }
+        return process.exitValue();
+    }
+
     @SneakyThrows
     public synchronized int waitFor() {
         if (!isRunning()) {
-            return 0;
+            return exitValue();
         }
         return process.waitFor();
     }
 
     @SneakyThrows
     public synchronized boolean waitFor(int timeoutSeconds) {
-        return isRunning() && process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
+        if (!isRunning()) {
+            return true;
+        }
+        return process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
+    }
+
+    @SneakyThrows
+    public synchronized void inputKeys(String keys) {
+        if (!isRunning()) {
+            throw new InvalidException("Not start");
+        }
+
+        OutputStream out = process.getOutputStream();
+        out.write(keys.getBytes(StandardCharsets.UTF_8));
+        out.flush();
     }
 
     public synchronized void kill() {
@@ -221,7 +329,6 @@ public class ShellCommander extends Disposable implements EventTarget<ShellComma
     }
 
     public synchronized void restart() {
-        log.debug("restart {}", shell);
         kill();
         start();
     }
